--- a/web.html
+++ b/web.html
@@ -4,54 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h2 {
-            text-align: center;
-        }
-        .form-input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .login-button {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .login-button:hover {
-            background-color: #45a049;
-        }
-        .error-message {
-            color: red;
-            font-size: 12px;
-            text-align: center;
-        }
-    </style>
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm" onsubmit="return validateForm()">
@@ -62,6 +18,7 @@
         </form>
     </div>
 
+    <!-- JavaScript for form validation -->
     <script>
         function validateForm() {
             var username = document.getElementById("username").value;
@@ -76,6 +33,5 @@
             }
         }
     </script>
-
 </body>
 </html>
