--- a/Portfolio.html
+++ b/Portfolio.html
@@ -47,14 +47,17 @@
                 <div class="project-card">
                     <h3>Home Appliance Using IoT</h3>
                     <p>IoT-enabled home appliances provide remote control, automation, and energy efficiency through sensors and internet connectivity.</p>
+                    <a href="https://github.com/Arjunjai10/project" target="_blank" class="btn-primary">Learn More</a>
                 </div>
                 <div class="project-card">
                     <h3>Personalized News Recommendation System</h3>
                     <p>Uses algorithms to analyze user preferences and behavior, delivering tailored news content and enhancing user experience.</p>
+                    <a href="https://github.com/SECE-2023-2027/CSEA-Arjunjai10" target="_blank" class="btn-primary">Learn More</a>
                 </div>
                 <div class="project-card">
                     <h3>Talent Management System</h3>
                     <p>A platform to streamline and optimize employee recruitment, development, and retention, aligning with business goals.</p>
+                    <a href="https://github.com/SECE-2023-2027/java-db-project-leap-phase-i-Arjunjai10" target="_blank" class="btn-primary">Learn More</a>
                 </div>
             </div>
         </div>
