--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <h2>Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <h3>Home Appliance Using IoT</h3>
-                    <p>IoT-enabled home appliances provide remote control, automation, and energy efficiency through sensors and internet connectivity.</p>
-                    <a href="https://github.com/Arjunjai10/project" target="_blank" class="btn-primary">Learn More</a>
+                    <h3>Banking Application</h3>
+                    <p>A BAnking Application is a software platform designed to manage financial transactions, account information, and customer services, providing users with convenient access to banking functions such as transfers, payments, and balance checking. It streamlines financial management, ensuring security, efficiency, and user-friendly interfaces for both personal and business banking.</p>
+                    <a href="https://github.com/SECE-2023-2027/java-db-project-leap-phase-i-Arjunjai10" target="_blank" class="btn-primary">Learn More</a>
                 </div>
                 <div class="project-card">
                     <h3>Personalized News Recommendation System</h3>
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Arjun Jai Shanmugam PVN | All Rights Reserved</p>
+        <p>&copy; Arjun Jai Shanmugam PVN </p>
     </footer>
 </body>
 </html>
