--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <nav>
+        <div class="hero-logo">
+            <div class="logo">A</div> 
+        </div>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -46,7 +49,7 @@
             <div class="project-grid">
                 <div class="project-card">
                     <h3>Banking Application</h3>
-                    <p>A BAnking Application is a software platform designed to manage financial transactions, account information, and customer services, providing users with convenient access to banking functions such as transfers, payments, and balance checking. It streamlines financial management, ensuring security, efficiency, and user-friendly interfaces for both personal and business banking.</p>
+                    <p>A bank application is a digital platform that allows users to manage financial transactions, access account information, and perform banking services securely and efficiently.</p>
                     <a href="https://github.com/SECE-2023-2027/java-db-project-leap-phase-i-Arjunjai10" target="_blank" class="btn-primary">Learn More</a>
                 </div>
                 <div class="project-card">
